テキスト追加

--- a/skill.html
+++ b/skill.html
@@ -24,7 +24,7 @@
     <img src="../images/html_original_wordmark_logo_icon_146478.png" class="list-tit" >
     <div class="list-content">
       <p class="list-txt">
-        HTML<br>4年ほど勉強しております。<br>基本的なコーディングの知識の保有開発経験あり</p>
+        HTML<br>4年ほど勉強しております。<br>基本的なコーディングの知識の保有開発経験あり aaaaa</p>
     </div>
   </li>
   <!-- list-item 2つ目 -->
