cssが動かないので修正

--- a/site/HP/index.html
+++ b/site/HP/index.html
@@ -4,43 +4,43 @@
         <meta charset="utf-8">
         <title>EXIM</title>
         <meta nane="discription" content="">
-        <link rel="stylesheet" href="css/style.css">
-        <link rel="stylesheet" href="css/Untitled-1.css">
+        <link rel="stylesheet" href="../HP/css/style.css">
+        <link rel="stylesheet" href="../HP/css/Untitled-1.css">
         <meta http-equiv="X-UA-Compatible" content="IE=Chrome">
-        <meta name="viewport" content="width=device-width,initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=2, user-scalable=no">
 <body>
     <header class="wrapper">
-        <img class="Exim"src="img/hedder.png"  alt="一番上の画像"object-fit:cover>
-        <div class="igs">
+        <img class="exim"src="img/hedder.png"  alt="一番上の画像">
+        <div>
             <ul class="f">
-                <li class="sideborder"><a href="#">ホーム</a></li>
-                <li><a href="#member">創設者</a></li>
-                <li class="sideborder"><a href="#about">サークル概要</a></li>
-                <li class="sideborder"><a href="#contact">お問い合わせ</a></li>
+                <li ><a href="#">ホーム</a></li>
+                <li ><a href="#member">代表</a></li>
+                <li ><a href="#about">サークル概要</a></li>
+                <li ><a href="#contact">お問い合わせ</a></li>
             </ul>
         </nav>
         </div>
     </header>
     <main>
 <!--下代表挨拶-->
-        <section id="member" class="wrapper">
+        <section id="member" >
             <h2 class="sec-title">サークル代表者</h2>
-            <p><img src="img/大河.png" id="icon" alt=""></p>
-                    <h3>CEO 山田 大河</h3>
+            <p><img src="img/taiga.png" id="icon" alt="代表"></p>
+                    <h3>代表 山田 大河</h3>
                     <p>aaaaaaaaaaiiiiiiiiiiiuuuuuueeeoooooooo</p>
         </section>
 <!--下概要-->
-        <section id="about" class="wrapper">
+        <section id="about" >
             <h2 class="sec-title">サークル概要</h2>
             <p>学内イベントの主催、企画運営他サークル等イベントのお手伝い等の学内イベントを支えるサークルです。</p>
         </section>
 <!--下お問い合わせ-->
-        <section id="contact" class="wrapper">
+        <section id="contact" >
             <h2 class="sec-title">お問い合わせ</h2>
-            <p class="dack">EXIMに関するお問い合わせや<br>
+            <p>EXIMに関するお問い合わせや<br>
                 『こんなイベントを開いて欲しい！』<br>
                 『こんな大会を開きたい！』<br>
-                このような要望があれば<a id="youbou" href="https://forms.gle/sbvnHQSnPtrejJpt6">こちら</a>までお願いします！！
+                このような要望があれば<a class="youbou" href="https://forms.gle/sbvnHQSnPtrejJpt6">こちら</a>までお願いします！！
                 </p>
         </section>
     </main>
