--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <li class="work_aut"><a href="../ths-is-my-portfolio/site/HP/index.html"><img src="../ths-is-my-portfolio/site/HP/img/hedder.png"></a>
             <p>クライアント:情報科学専門学校 サークル名EXIM<br>制作年月日:2023年11月15日〜2023年11月21日<br>
             エディター:Visual Studio Code<br>使用言語:HTML.CSS<br>自分が所属するサークルEXIMより<br>依頼、スマホのレスポンシブ対応をしてほしい。
-            <br>要望としては、サークルなので学校で見られることが多いことからスマホ対応をしてほしいとのことでしたレスポンシブ対応を導入いたしました。</p></li>
+            <br>要望としては、サークルなので学校で見られることが多いことからスマホ対応をしてほしいとのことでしたレスポンシブ対応を導入いたしました。<br>なぜかレスポンシブが動いていません</p></li>
         </ul>
      </nav>
         
