一部宣言を変更

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </main>
   <section>
     <div class="the_work">
-     <h2 class="myname">Work</h2>
+     <h2 class="my_name">Work</h2>
      <nav>
       <ul id="out_sid">
           <li class="work_aut"><a href="../ths-is-my-portfolio/site/ハーレー/index.html"><img src="../ths-is-my-portfolio/site/ハーレー/img/franticcc_1.png"></a>
@@ -46,7 +46,7 @@
   
   <section>
     <div id="center_position">
-     <h2 class="myname">Skill</h2>
+     <h2 class="my_name">Skill</h2>
      <div class="image_size">
       <nav>
          <ul class="empty_box">
@@ -60,7 +60,7 @@
   </section>
   <section>
     <main id="position_center">
-      <h2 class="myname">About</h2>
+      <h2 class="my_name">About</h2>
       <p class="tex"><b>原拓哉</b>
         <b>Hara Takuya</b></p>
       <img src="../ths-is-my-portfolio/images/DSC02937.JPG"alt="自分" width="25%">
